fix overflow styles

--- a/projects/mainsite/app/styles/side-menu.css
+++ b/projects/mainsite/app/styles/side-menu.css
@@ -581,9 +581,8 @@ input[type=search]:focus {
   padding-bottom: 150px;
   height: 100%;
 }
-#search-backdrop #search-display .search-display-wrapper {
-  /*overflow-y: auto;*/
-  /*height: 100%;*/
+#search-backdrop #search-display {
+  overflow-y: scroll;
 }
 #search-backdrop .search-element {
   cursor: pointer;
